version 1.0a1

General Changes
* Merging CamlTk and LablTk API interfaces
* Activate and Deactivate Events are added
* Virtual events support
* Added UTF conversion

Incompatibilities between the previous camltk/labltk versions
* CamlTk's bind_tag and bind_class superseded tag_bind and class_bind.
* added optional arguments to some functions of CamlTk.
* The library name libfrx and libjpf are changed to frxlib and jpflib
  respectively, to avoid the library name confusion.